2011-07-08 Miguel de Dios  <miguel.dedios@artica.es>

	* images/minimap_open_arrow.png, images/minimap_close_arrow.png: added the
	image files for the network enterprise viewer.

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  include/functions_config.php,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql,
	  godmode/setup/performance.php: Added support for unknown module
	  deletion.

2011-07-08  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added 'always' to the
	possible values into talert_templates.type

2011-07-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Add always condition to templates

2011-07-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Changed deprecated function 
	get_user_groups() to users_get_groups(). 

2011-07-08  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_agents.php: Fixed agents_get_group_agents()
	does not work correctly with $childGroups enabled.

2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Added code for get agent filter
	from policy agents view

2011-07-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Fixed graphs on Visual console.

2011-07-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_visual_map.php: Added links to service items
	in visual console.
	
	Pending tasks: #3175079
	
	* general/pandora_help.php: Changed color of the footer.

2011-07-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_network_components.php,
	  include/functions_api.php,
	  include/functions_ui.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  extensions/resource_registration.php,
	  extensions/plugin_registration.php,
	  operation/agentes/status_monitor.php,