@@ -1,3 +1,9 @@
+2011-07-11  Junichi Satoh  <junichi@rworks.jp>
+
+	* operation/agentes/estado_agente.php,
+	godmode/agentes/modificar_agente.php: Improved group selection, it
+	allows group recursion.
+
 2011-07-08 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* images/minimap_open_arrow.png, images/minimap_close_arrow.png: added the
